--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-05-29  Martin Junius  <mj@fido.de>
 
+	======= Release 4.3.3 ================================================
+	------- CVS tag R433 -------------------------------------------------
 	------- CVS ci -------------------------------------------------------
 
 	* ANNOUNCE: updated.
